--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.10",
+    "@ng-icons/core": "^26.3.0",
+    "@ng-icons/ionicons": "^26.3.0",
+    "@ng-icons/octicons": "^26.3.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
